--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&family=Roboto:wght@400..900&family=Open+Sans:wght@400..900&family=Montserrat:wght@400..900&family=Nunito:wght@400..900&family=Merriweather:wght@400..900&family=Playfair+Display:wght@400..900&family=Poppins:wght@400..900&family=Raleway:wght@400..900&family=Oswald:wght@400..900&family=Source+Sans+Pro:wght@400..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="preconnect" href="https://images.example.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
